# Hyrandom

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
Hyrandom/: __init__.py  __main__.py  base.py  native.py  numpy_ext.py
src/: lib.rs
tests/: test_randomly.py
