[package]
name = "hyrandom_rs"
version = "1.0.6"
edition = "2021"

[lib]
name = "_hyrandom_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = "fat"    
codegen-units = 1 
panic = 'abort'   
strip = true